force-app/main/default/objects/Innova_Queue_Owner__c/Innova_Queue_Owner__c.object-meta.xml
<CustomObject>
    <label>Queue Owner</label>
    <nameField>
        <displayFormat>Q - {000}</displayFormat>
        <label>Queue Owner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>