force-app/main/default/objects/Innova_Queue_Owner__c/fields/Innova_Public_Group_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Innova_Public_Group_Escalation__c</fullName>
    <description>Public Group to receive the Notifications for SLA response and resolution</description>
    <label>Public Group Escalation L1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>