force-app/main/default/objects/Innova_Queue_Owner__c/fields/Innova_Public_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Innova_Public_Group_Id__c</fullName>
    <description>Id of Public Group Escalation</description>
    <label>Public Group Id Escalation L1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>