force-app/main/default/objects/Innova_Queue_Owner__c/fields/Public_Group_Escalation_L2__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Escalation_L2__c</fullName>
    <label>Public Group Escalation L2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>