force-app/main/default/objects/Innova_Queue_Owner__c/fields/Public_Group_Id_Escalation_L2__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Id_Escalation_L2__c</fullName>
    <label>Public Group Id Escalation L2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>