force-app/main/default/objects/Innova_Queue_Owner__c/fields/Queue_Manager__c.field-meta.xml
<CustomField>
    <fullName>Queue_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queue Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Queue_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>