force-app/main/default/objects/Innova_Queue_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Queue_Name__c</columns>
    <columns>Innova_Public_Group_Escalation__c</columns>
    <columns>Queue_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>